--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,23 @@
 body{
     background-color: #f5f5dd;
-    
 }
-
 div{
-    
-    width: 4cm; height: 4cm; margin: 5mm; background-color:black;
+    margin-left: auto;
+    margin-right: auto;
+    width: 4cm;
+    height: 4cm;
+    margin: 5mm;
+    background-color:black;
  }
  #p{
-    margin-left: auto; margin-right: auto;
-    background-color:rgb(0, 0, 0);
+    background-color  :rgb(0, 0, 0);
  }
  #d{
-    margin-left: auto; margin-right: auto;
      background-color: rgba(0, 0, 0, 0.658);
  }
  #t{
-    margin-left: auto; margin-right: auto;
      background-color: rgba(0, 0, 0, 0.363);
  }
  #c{
-    margin-left: auto; margin-right: auto;
      background-color: rgba(0, 0, 0, 0.137);
  }
